Prevent strange “Search within” text overflow

--- a/src/app/shared/search/search.component.scss
+++ b/src/app/shared/search/search.component.scss
@@ -34,6 +34,7 @@
 .search-in-results{
     height: 35px;
     line-height: 35px;
+    white-space: nowrap;
 
     label{
         font-weight: 400;
